# gain-vst

./: CMakeLists.txt  README.md  gain-vst.jucer
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/gain-vst.xcodeproj/: project.pbxproj
Builds/MacOSX/gain-vst.xcodeproj/project.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/gain-vst.xcodeproj/xcuserdata/jason.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2022/: gain-vst.sln  gain-vst_SharedCode.vcxproj  gain-vst_SharedCode.vcxproj.filters  gain-vst_StandalonePlugin.vcxproj  gain-vst_VST3.vcxproj  gain-vst_VST3ManifestHelper.vcxproj  resources.rc
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginTests.cpp
